testsuite/codegen/compile-fail/main-class-missing.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
class Foo { }

// CHECK-L: error: Class 'Main' is missing
